Fix #120875: crash when deleting all group output nodes

This didn't take `geometry_nodes_default_cpp_value` into account properly.